New in master
=============

Features
--------

* Accept ``now`` in post-list date conditions
* Add ``RSS_COPYRIGHT``, ``RSS_COPYRIGHT_PLAIN``, and
  ``RSS_COPYRIGHT_FORMATS`` options in conf.py which can be disabled
  by specifying ``copyright_=False`` to ``generic_rss_renderer``, or
  overriden by specifying an explicit value.
* Write PID of detached ``nikola serve`` process to a file called
  ``nikolaserve.pid``
* Append file name (generated from title) if ``nikola new_post``
  receives directory name as path (Issue #2651)
* Add a ``require_all_tags`` parameter to the ``post-list`` directive to
  show only posts that have all specified tags. (Issue #2665)
* Add ``META_GENERATOR_TAG`` option in conf.py allowing the meta generator
  tag to be disabled (Issue #2628)
* Add ``YUI_COMPRESSOR_EXECUTABLE``, ``CLOSURE_COMPILER_EXECUTABLE``,
  ``OPTIPNG_EXECUTABLE``, ``JPEGOPTIM_EXECUTABLE`` and
  ``HTML_TIDY_EXECUTABLE`` to configure executables for built-in filters.
  (Issue #2615)
* Allow setting custom GUID in feeds (Issue #2378)

Bugfixes
--------

* Fix crashes when rendering subcategories (Issue #2681)
* Prevent writing cache files outside of the cache folder
  (Issue #2684)
* Fix mimetype guessing in auto mode (Issue #2645)
* Fix filters.html5lib_xmllike for laters html5lib (Issue #2648)
* Skip the current post in post lists (Issue #2666)
* Fix poor performance when compiling multiple markdown documents with
  the markdown compiler. (Issue #2660)
* Fix crash if ``SHOW_INDEX_PAGE_NAVIGATION`` is ``True`` while
  ``INDEXES_STATIC`` is ``False``. (Issue #2654)
* Make ``NEW_POST_DATE_PATH`` follow ``rrule`` if it exists (issue #2653)
* Fix crash if ``PAGE_INDEX`` is enabled (Issue #2646)

New in v7.8.3
=============

Emergency bugfix release (``nikola new_page`` did not work in v7.8.2).

Features
--------

* Sort posts chronologically with one unified function (easier to
  change). (Issue #2627)
* Sort posts in the following order (most important last): source path