@@ -4,6 +4,7 @@ New in master
 Features
 --------
 
+* Make ``nikola plugin --list-installed`` more readable (Issue #2692)
 * Accept ``now`` in post-list date conditions
 * Add ``RSS_COPYRIGHT``, ``RSS_COPYRIGHT_PLAIN``, and
   ``RSS_COPYRIGHT_FORMATS`` options in conf.py which can be disabled
